--- a/package.json
+++ b/package.json
@@ -7,11 +7,20 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start:backend": "node backend/server.js",
+    "dev:backend": "nodemon backend/server.js"
   },
   "dependencies": {
+    "axios": "^1.6.7",
+    "chart.js": "^4.4.9",
+    "date-fns": "^3.3.1",
+    "express": "^4.18.2",
+    "natural": "^6.10.4",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-chartjs-2": "^5.3.0",
+    "react-dom": "^19.1.0",
+    "react-icons": "^5.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
@@ -19,10 +28,13 @@
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.1",
     "autoprefixer": "^10.4.21",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
+    "node-fetch": "^3.3.2",
     "postcss": "^8.5.4",
     "tailwindcss": "^3.4.17",
     "vite": "^6.3.5"
